# email-router-core

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_V2.md  AUTHENTICATION.md  BUILD_WORKFLOWS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  FRONTEND_DEVELOPMENT_GUIDE.md  MILESTONES.md  PROJECT_STATUS.md  README.md  REQUIREMENTS_MIGRATION.md  SECURITY_CLEANUP_PLAN.md  TRANSITION_ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requirements.txt.deprecated
.github/workflows/: backend-ci.yml
alembic/: env.py
alembic/versions/: fb58df44a6a8_initial_migration_create_user_and_.py
app/: __init__.py  main.py
app/core/: __init__.py  config_manager.py  config_schema.py
app/database/: __init__.py  connection.py  models.py
app/middleware/: __init__.py  api_key_auth.py  dual_auth.py  jwt_auth.py  rate_limiter.py  security.py
app/models/: client_config.py  dashboard_schemas.py  schemas.py
app/routers/: __init__.py  auth.py  dashboard.py  webhooks.py
app/routers/api/: __init__.py  v1.py  v2.py
app/security/: __init__.py
app/security/authentication/: __init__.py  handlers.py  jwt_service.py  middleware.py
app/services/: __init__.py  ai_classifier.py  auth_service.py  client_manager.py  config_service.py  dashboard_service.py  dynamic_classifier.py  email_composer.py  email_sender.py  email_service.py  monitoring.py  rbac.py  routing_engine.py  template_engine.py  websocket_manager.py
app/utils/: __init__.py  client_loader.py  config.py  domain_resolver.py  email_templates.py  logger.py  security_config.py  startup_validator.py
backend/: Dockerfile.dev  README.md  TESTING.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: fb58df44a6a8_initial_migration_create_user_and_.py
backend/clients/: active
backend/requirements/: README.md  base.txt  dev.txt  prod.txt  test.txt
backend/scripts/cli/: client_manager_cli.py  client_onboarding.py
backend/src/: main.py
backend/src/api/v1/: auth.py  clients.py  dashboard.py  dependencies.py  webhooks.py
backend/src/api/v2/: config.py
backend/src/application/: startup.py
backend/src/application/dependencies/: auth.py  config.py  repositories.py
backend/src/application/middleware/: auth.py  decorators.py  rate_limit.py  security.py  threat_detection.py
backend/src/core/: __init__.py
backend/src/core/authentication/: __init__.py  auth_service.py  context.py  handlers.py  jwt.py  manager.py  permissions.py  rbac.py
backend/src/core/clients/: __init__.py  loader.py  manager.py  resolver.py
backend/src/core/dashboard/: service.py
backend/src/core/email/: __init__.py  classifier.py  composer.py  router.py  service.py
backend/src/core/email/ai/: client.py  prompt_builder.py
backend/src/core/email/branding/: __init__.py  manager.py
backend/src/core/email/fallbacks/: __init__.py  calculator.py  responses.py
backend/src/core/email/generators/: __init__.py  acknowledgment.py  base.py  team_analysis.py
backend/src/core/email/templates/: __init__.py  context.py  engine.py  loader.py  validator.py
backend/src/core/models/: __init__.py  client.py  dashboard.py  schemas.py
backend/src/core/ports/: __init__.py  analytics_repository.py  client_repository.py  config_provider.py  user_repository.py
backend/src/infrastructure/adapters/: __init__.py  analytics_repository_impl.py  client_repository_impl.py  config_provider.py  user_repository_impl.py
backend/src/infrastructure/config/: database_bridge.py  manager.py  schema.py  security.py
backend/src/infrastructure/database/: connection.py  models.py
backend/src/infrastructure/legacy/: auth_compat.py  config.py  config_service.py
backend/src/infrastructure/monitoring/: metrics.py
backend/src/infrastructure/templates/: email.py
backend/src/infrastructure/websockets/: manager.py
backend/tests/: conftest.py
backend/tests/fixtures/: __init__.py  auth_fixtures.py  conftest.py
backend/tests/integration/: __init__.py  test_authentication.py  test_authentication.py.bak  test_authentication.py.bak2  test_dashboard_api.py  test_trend_analysis_e2e.py
backend/tests/unit/: test_config_validation.py  test_dashboard_service.py  test_jwt_service.py  test_multi_tenant.py
cli/: client_manager_cli.py  client_onboarding.py
data/: email_router.db  email_router.db-shm  email_router.db-wal
docs/: AUTHENTICATION.md  CLEANUP_INITIATIVE_SUMMARY.md  CODEBASE_CLEANUP_PLAN.md  CODEBASE_INVENTORY.md  DEPLOYMENT.md  MASTER_REORGANIZATION_PLAN.md  PROJECT_ORGANIZATION_STRATEGY.md  README.md  SECURITY_CLEANUP_PLAN.md  configuration-schema.md  refactor_plan.md
docs/api/: endpoints.md
docs/architecture/: codebase-inventory.md  configuration-schema.md  configuration.md  system-architecture.md
docs/development/: developer-guide.md  known-issues.md  testing-guide.md
docs/frontend/: README.md  api-integration.md  architecture.md  design-system.md  development-guide.md
docs/operations/: migration-guide-v2.md
docs/releases/: v2.0-release-notes.md
docs/reorganization/: README.md  REORGANIZATION_COMPLETE.md  phase-7-cleanup-plan.md
docs/templates/: client-config-template.yaml
frontend/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.html
scripts/: code_quality_report.py  create_admin_user.py  migrate_to_new_requirements.sh  simple_create_admin.py
shared/constants/: endpoints.ts
shared/models/: __init__.py  api.py  api.ts  auth.py
shared/schemas/: __init__.py  api.py
shared/types/: api.ts
tests/: __init__.py  conftest.py  test_authentication.py  test_config_validation.py  test_dual_auth_middleware.py  test_enhanced_templates.py  test_integration_pipeline.py  test_jwt_service.py  test_multi_tenant.py  test_performance_regression.py  test_service_isolation.py  test_webhook.py
tests/fixtures/: auth_fixtures.py  client_fixtures.py  conftest.py
ui/: .gitignore  BUILD.md  package-lock.json  package.json  vite.config.ts
ui/.svelte-kit/: ambient.d.ts
ui/src/: app.css  app.d.ts
(+133 files in other folders)
