[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-email-router"
version = "2.0.0"
description = "Production-ready AI email router template for customer deployment"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Cole Nielsen", email = "cole@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["email", "ai", "automation", "fastapi", "claude", "mailgun", "cloud-run"]

# Dependencies are now managed in backend/requirements/
# See backend/requirements/README.md for details
dependencies = []

[project.optional-dependencies]
# Use backend/requirements/ files instead:
# - backend/requirements/base.txt for core dependencies
# - backend/requirements/dev.txt for development
# - backend/requirements/test.txt for testing
# - backend/requirements/prod.txt for production
dev = []
test = []
prod = []

[project.urls]
Homepage = "https://github.com/colenielsonauto/agent_arc"
Repository = "https://github.com/colenielsonauto/agent_arc"
Documentation = "https://github.com/colenielsonauto/agent_arc#readme"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
